fun fact. chars to int are not the same thing as parsing a string as an int. Let it be known. Fixed Day 2 part 1

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,6 +39,21 @@
             "problemMatcher": []
         },
         {
+            "label": "Rust Release Mode - Redirect",
+            "command": "cargo",
+            "args": [
+                "run",
+                "--release",
+                ">",
+                "output_debug.txt"
+            ],
+            "options": {
+                "cwd": "${workspaceRoot}"
+            },
+            "type": "shell",
+            "problemMatcher": []
+        },
+        {
             "label": "Rust Build",
             "command": "cargo",
             "args": [
